--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,3 +1,26 @@
 h1 {
   text-decoration: underline;
 }
+
+
+.display {
+    border: 1px solid black;
+    font-family: Monospace;
+    font-size: 2.5rem;
+    line-height: 3rem;
+    text-align: right;
+    width: 20rem;
+    height: 3rem;
+}
+
+.history {
+    font-size: 1.5rem;
+    width: 20rem;
+    text-align: right;
+    height: 2rem;
+}
+
+.button {
+    width: 5rem;
+    height: 5rem;
+}
